--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
+<!--
+Name of the publication
+1-2 main headlines
+  3-5 sentences intro
+  1 photograph each
+2-6 additional article headlines
+  1-2 photo in this section
+-->
+
 <html>
 
 <head>
   <title>This is my first website</title>
-  <link rel="stylesheet" href="main.css">
+  <meta name=description content="This is facts about the website that you would like a search engine to know" />
+  <meta name=keywords content="Pella,Iowa,tulips,flowers,festival" />
+  <meta name=robots content="nofollow" />
+  <meta http-equiv="pragma" content="no-cache" />
+
+  <link rel="stylesheet" href="main.css" />
+
 </head>
 
 <body>
