--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Name of the publication
       </div>
       <div class="row">
         <div class="column">
-          <img src="assets/PurpleTulips.jpg" alt="purple tulips photograph" class="center" style="width:300px;height:400px;"></img>
+          <img src="assets/PurpleTulips.JPG" alt="purple tulips photograph" class="center" style="width:300px;height:400px;"></img>
         </div>
       </div>
 
