--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ Name of the publication
   1-2 photo in this section
 -->
 
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -15,31 +17,102 @@ Name of the publication
   <meta name=keywords content="Pella,Iowa,tulips,flowers,festival" />
   <meta name=robots content="nofollow" />
   <meta http-equiv="pragma" content="no-cache" />
-
   <link rel="stylesheet" href="main.css" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
 <body>
-  <h1>Pella Tulips</h1>
-  <p>Every year at the beginning of May in Pella, Iowa hundreds of tulips come into bloom. Tulips of all colors can be seen all over town. During this time many people come to visit the town of Pella, Iowa.</p>
 
-  <h2>Tulip Time Festival</h2>
-  <p>Every year the Tulip Time Festival is held in Pella, Iowa. This festival consists of a bunch of different activities that take place over three days. The activities are a parade, mueseums and tours, gardens, performances, and displays. </p>
+
+
+  <div class="header">
+
+    <h1>Women's Sports News</h1>
+    <img src="assets/futureNews.png" alt="logo"></img>
+
+  </div>
+
+
 
   <div class="row">
-    <div class="column">
-      <img src="assets/Poppys.jpg" alt="red tulips photograph" class="center" style="width:300px;height:400px;"></img>
+
+    <div class="col-3 menu">
+
+      <ul>
+
+        <li>Scores</li>
+
+        <li>Updates</li>
+
+        <li>Live Stream</li>
+
+        <li>Statistics</li>
+
+      </ul>
+
     </div>
-    <div class="row">
-      <div class="column">
-        <img src="assets/MorePoppys.jpg" alt="tulips photograph" class="center" style="width:300px;height:400px;"></img>
+
+
+
+    <div class="col-6">
+
+      <h1>Serena Williams Beats Robot to Win the Australian Open</h1>
+
+      <p>Serena Williams faces off against a robot in the finals of the Australian Open. Serena won the match two sets to one. Serena took the first set of the match 6-3, and the robot rallied back in the second set to win 6-4. However, Serena did not let that get her down, because she came back and won the third set 6-1. Serena has become the first tennis player to defeat a robot in the final of a major.</p>
+
+      <img src="assets/3000.jpg" alt="Serena Williams holding trophy" style="width:425px; height:300px;"></img>
+
+      <h1>Simone Biles Wins her Sixth Straight Olympic All Around Title</h1>
+
+      <p>Simone Biles has won the 2036 Olympic gymnastics all around title. This is Simone's sixth straight Olympic Games, and she has won every single Olympic Games that she has been to. Simone is now 40 years old, which makes her the oldest gymnast to ever win a medal at the Olympic Games.</p>
+
+      <img src="assets/Simone.jpg" alt="Simone Biles" style="width:425px; height:300px;"></img>
+
+
+    </div>
+
+
+
+    <div class="col-3 right">
+
+      <div class="aside">
+
+        <h2>Womens's National Team beats Team Robot in World Cup Final</h2>
+
+        <img src="assets/Soccer.jpg" alt="Womens national team holding trophy" style="width:300px; height:200px;"></img>
+
+        <h2>The Women's College World Series has more viewers than the Men's College World Series</h2>
+
+        <img src="assets/Softball.jpg" alt="Womens College World Series Softball Field" style="width:300px; height:200px;"></img>
+
+        <h2>Katie Ledecky has won her 30th Olympic Medal</h2>
+
+        <img src="assets/Katie.jpg" alt="Katie Ledecky" style="width:300px; height:200px;"></img>
+
       </div>
-      <div class="row">
-        <div class="column">
-          <img src="assets/PurpleTulips.JPG" alt="purple tulips photograph" class="center" style="width:300px;height:400px;"></img>
-        </div>
-      </div>
+
+    </div>
+
+  </div>
+
+
+
+  <div class="footer">
+
+
+      <p>&copy;WomensSportsNews </p>
+      <p>Careers </p>
+      <p>History </p>
+      <p>Contact </p>
+
+    <img src="assets/futureNews.png" alt="logo"></img>
+
+
+  </div>
+
+
 
 </body>
 
